Changes to gitignore

--- a/views/artworks.jade
+++ b/views/artworks.jade
@@ -10,5 +10,6 @@ block content
                 thead
                     th Artist
                     th Title
+                    th Image
                     th More Info
                 tbody
