I have no idea what I'm doing
Removed unused items from navabar
Cleaned up code

--- a/views/artists.jade
+++ b/views/artists.jade
@@ -8,6 +8,7 @@ block content
         #artistList
             table.table.table-striped
                 thead
+                  //each result in results
                     th Name
                     th Gender
                     th Born
