--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,10 +10,10 @@ html
     script(src='/javascripts/main.js')
 
   body
-  
+
     block content
 
-    .navbar.navbar-default.navbar-fixed-top(role='navigation')
+    .navbar.navbar-inverse.navbar-fixed-top(role='navigation')
       .container
         .navbar-header
           button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
@@ -30,22 +30,3 @@ html
               a(href='/viewartists') Artists
             li
               a(href='/viewartworks') Artworks
-            li.dropdown
-              a.dropdown-toggle(href='#', data-toggle='dropdown')
-                | Dropdown 
-                span.caret
-              ul.dropdown-menu(role='menu')
-                li
-                  a(href='#') Action
-                li
-                  a(href='#') Another action
-                li
-                  a(href='#') Something else here
-                li.divider
-                li.dropdown-header Nav header
-                li
-                  a(href='#') Separated link
-                li
-                  a(href='#') One more separated link
-
-
