--- a/views/artists.jade
+++ b/views/artists.jade
@@ -2,21 +2,22 @@ extends layout
 
 block content
 
-    #wrapper
+  #wrapper
 
-        h2 List of Artists
-        #artistList
-            table.table.table-striped
-                thead
-                    th Name
-                    th Gender
-                    th Born
-                    th Total Works
-                    th More
-                tbody
-                  each result in results
-                    tr
-                      td #{result.fc}
-                      td #{result.gender}
-                      td #{result.birthYear}
-                      td #{result.totalWorks}
+    h2 List of Artists
+    #artistList
+        table.table.table-striped
+            thead
+                th Name
+                th Gender
+                th Born
+                th Total Works
+                th More
+            tbody
+              each result in results
+                tr
+                  td #{result.fc}
+                  td #{result.gender}
+                  td #{result.birthYear}
+                  td #{result.totalWorks}
+                  td #[a(href="/artists/#{result.id}") More]
