--- a/views/layout.jade
+++ b/views/layout.jade
@@ -27,6 +27,6 @@ html
             li
               a(href='/') Home
             li
-              a(href='/viewartists') Artists
+              a(href='/artists') Artists
             li
-              a(href='/viewartworks') Artworks
+              a(href='/artworks') Artworks
