--- a/views/index.jade
+++ b/views/index.jade
@@ -8,15 +8,16 @@ block content
 			p
 				| The Tate is an institution that houses the United Kingdom's national collection of British art, and international modern and contemporary art.
 			p
-				
+
 	.container
 		.row
 			.col-md-6
 				h2 Random Artist
-				p
-					| Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-				p
-					a.btn.btn-default(href='#', role='button') More Info »
+				each item in artist
+					p
+						| #{item.fc}
+					p
+						a.btn.btn-default(href='#', role='button') More Info »
 			.col-md-6
 				h2 Random Artwork
 				p
