--- a/views/layout.jade
+++ b/views/layout.jade
@@ -30,3 +30,6 @@ html
               a(href='/artists') Artists
             li
               a(href='/artworks') Artworks
+
+    footer
+      p &copy; Tate Gallery 2016
