Working on implementing search feature

--- a/views/index.jade
+++ b/views/index.jade
@@ -10,7 +10,7 @@ block content
 			p
 
 	.container
-		h2 Random Artworks (Click image to learn more)
+		h2 Random Artworks
 		hr
 		.row
 			each item in artwork
